====================
2021/10/23

- Changed cubr_json OpenAndParse to set Copper return as bool result of Storage::parseFile.
- Added CheckAccessorValidity().
- Implemented Storage::initializeRoot(), InitRootNode() and added to addToEngine().
- Implemented WriteJSON(), Storage::writeToFile(), Storage::writeToString(), Storage::writeNodeToString() and debugged.
- Added EnablePrettyPrint() and added to addToEngine().


====================
2021/1/14, 2021/3/20, 2021/4/17, 2021/5/9

- Fixed GUIWatcher::OnEvent() blocking event passback.
- Added GUIWatcher::bringToFront() to allow inserting GUIWatcher between element and its parent.
- Added IGUIElement parenting in gui_create().
- Completed AttributeSource::existsAttribute() code.
- Minor fixes to string return in AttributeSource::getAttributeAsStringW().
- Added cubr_json.
- Updated all the example premake5 files to use Irrlicht/IrrExtension and correctly access irrJSON.
- Made cubr_json optional by a define INCLUDE_CUBR_JSON


====================
2020/5

- Added cubr_image.h and cubr_image.cpp


====================
2019/12/31

- Fixed bug in CuBridge::gui_watcher() that failed to set the GUIWatcher element to the alignment of the element it wraps, but the fix requires my custom IGUIElement::getAlignment().


====================
2019/8/5

- Added ability to remove all children via CuBridge::gui_remove_children(), GUIElement::removeChildren()


====================
2018/12/5-6 - 2018/12/16-19

- Changed CuBridge methods for Copper to use and return ForeignFunc::Result values.
- Changed MultifileRunner::require() to print a warning message instead of error message when the path size is zero.
- Added GUIElement::expandToParentBounds() and CuBridge::gui_expand() to use it.
- Added GUIWatcher (guiwatcher.h and .cpp).
- Added cubr_irrevent_translate (.h and .cpp).
- Changed CuBridge::setGUIEnvironment() to have an argument for a new root GUI element too (since the old one cannot be used).